--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.jvmargs=-Xmx1G
 minecraftVersion=1.20.1
 yarnMappings=1.20.1+build.10
 loaderVersion=0.15.6
+apiVersion=0.92.1+1.20.1
 
 # Mod Properties
 modVersion=1.0.0
