ci: add a release job

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
+minecraft.minVersion=1.20
+minecraft.maxVersion=1.20.1
+
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraftVersion=1.20.1
-yarnMappings=1.20.1+build.10
-loaderVersion=0.15.6
-apiVersion=0.92.1+1.20.1
+fabric.yarnVersion=1.20.1+build.10
+fabric.loaderVersion=0.15.6
+fabric.apiVersion=0.92.1+1.20.1
 
 # Mod Properties
-modVersion=1.0.0
-mavenGroup=me.chrr
-archivesBase=Scribble
+mod.name=Scribble
+mod.version=1.0.0
+mod.group=me.chrr
+
+# Publishing Properties
+modrinth.id=yXAvIk0x
