chore: release 0.1.0-beta

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ fabric.apiVersion=0.92.1+1.20.1
 
 # Mod Properties
 mod.name=Scribble
-mod.version=1.0.0
+mod.version=0.1.0-beta
 mod.group=me.chrr
 
 # Publishing Properties
