feat: support multiple versions up to 1.21

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,4 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - run: ./gradlew build
+      - run: ./gradlew chiseledBuild
