--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 mod.name=Scribble
-mod.version=0.1.0-beta
+mod.version=1.0.0
 mod.group=me.chrr
 
 # Publishing Properties
