chore: publish to CurseForge

--- a/versions/1.21/gradle.properties
+++ b/versions/1.21/gradle.properties
@@ -1,6 +1,5 @@
 # Minecraft Properties
-minecraft.minVersion=1.21
-minecraft.maxVersion=1.21
+minecraft.versions=1.21
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
