--- a/versions/1.20.4/gradle.properties
+++ b/versions/1.20.4/gradle.properties
@@ -1,6 +1,5 @@
 # Minecraft Properties
-minecraft.minVersion=1.20.3
-minecraft.maxVersion=1.20.4
+minecraft.versions=1.20.3,1.20.4
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
