--- a/versions/1.20.6/gradle.properties
+++ b/versions/1.20.6/gradle.properties
@@ -1,6 +1,5 @@
 # Minecraft Properties
-minecraft.minVersion=1.20.5
-minecraft.maxVersion=1.20.6
+minecraft.versions=1.20.5,1.20.6
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
