Run tests on Build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,8 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - run: ./gradlew chiseledBuild
+      - name: Run Tests
+        run: ./gradlew chiseledTest
+
+      - name: Run Build
+        run: ./gradlew chiseledBuild
