Run test on Release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,11 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - run: ./gradlew chiseledBuild
+      - name: Run Tests
+        run: ./gradlew chiseledTest
+
+      - name: Run Build
+        run: ./gradlew chiseledBuild
 
       - name: Fetch changelog
         run: |
