--- a/versions/1.20.4-fabric/gradle.properties
+++ b/versions/1.20.4-fabric/gradle.properties
@@ -1,5 +1,6 @@
-# Minecraft Properties
-minecraft.versions=1.20.3,1.20.4
+loom.platform=fabric
+platform.loaders=fabric,quilt
+platform.versions=1.20.3,1.20.4
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
