--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,9 @@ mod.name=Scribble
 mod.version=1.3.1
 mod.group=me.chrr
 
+modmenu.version=11.0.2
+clothconfig.version=15.0.140
+
 # Publishing Properties
 modrinth.id=yXAvIk0x
 curseforge.id=1051344
