--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 mod.name=Scribble
-mod.version=1.4.0
+mod.version=1.4.1-beta
 mod.group=me.chrr
 
 modmenu.version=11.0.2
