--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ version = "${modVersion}"
 displayName = "Scribble"
 description = "Expertly edit your books with rich formatting options, page utilities and more!"
 authors = "chrrrs"
-logoFile = "assets/scribble/icon.png"
+logoFile = "assets/scribble/banner.png"
 logoBlur = false
 
 [[mixins]]
