--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -9,6 +9,7 @@ version = "${modVersion}"
 displayName = "Scribble"
 description = "Expertly edit your books with rich formatting options, page utilities and more!"
 authors = "chrrrs"
+credits = "WiskiWiski"
 logoFile = "assets/scribble/banner.png"
 logoBlur = false
 
