--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,29 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Mod Properties
+platform.versions=[versioned]
+
+# Mod details
 mod.name=Scribble
 mod.version=1.5.0
 mod.group=me.chrr
 
+# Fabric
+# check these on https://modmuss50.me/fabric.html
+fabric.yarnVersion=[versioned]
+fabric.loaderVersion=[versioned]
+fabric.apiVersion=[versioned]
+
+# Forge and NeoForge
+# check these on https://files.minecraftforge.net/net/minecraftforge/forge/index_1.20.1.html
+# check these on https://projects.neoforged.net/neoforged/neoforge
+forge.version=[versioned]
+neoforge.version=[versioned]
+neoforge.yarnPatch=[versioned]
+
+# Dependencies
 modmenu.version=11.0.2
 clothconfig.version=15.0.140
 
-# Publishing Properties
+# Distribution
 modrinth.id=yXAvIk0x
 curseforge.id=1051344
