--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -5,7 +5,7 @@ license = "MIT"
 
 [[mods]]
 modId = "scribble"
-version = "${modVersion}"
+version = "${version}"
 displayName = "Scribble"
 description = "Expertly edit your books with rich formatting options, page utilities and more!"
 authors = "chrrrs"
@@ -18,4 +18,4 @@ config = "scribble.mixins.json"
 
 [[dependencies.scribble]]
 modId = "minecraft"
-versionRange = "${minecraftDependency}"
+versionRange = "${minecraft}"
