ci: run tests after building
It no longer is a dependency of `build`, so we have to do it manually again.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,6 @@ jobs:
 
       - name: Run Build
         run: ./gradlew chiseledBuild
+
+      - name: Run Tests
+        run: ./gradlew chiseledTest
