chore: build on an alpha version of NeoForge

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,8 @@ fabric.yarnVersion=[versioned]
 fabric.loaderVersion=[versioned]
 fabric.apiVersion=[versioned]
 
-# Forge and NeoForge
-# check these on https://files.minecraftforge.net/net/minecraftforge/forge/index_1.20.1.html
+# NeoForge
 # check these on https://projects.neoforged.net/neoforged/neoforge
-forge.version=[versioned]
 neoforge.version=[versioned]
 neoforge.yarnPatch=[versioned]
 
