--- a/versions/1.21.6/gradle.properties
+++ b/versions/1.21.6/gradle.properties
@@ -1,10 +1,9 @@
-platform.versions=1.21.6-rc.1
+platform.versions=1.21.6-rc1
 minecraft.version=1.21.6-rc1
 
 fabric.yarnVersion=1.21.6-rc1+build.1
 fabric.loaderVersion=0.16.14
 fabric.apiVersion=0.126.1+1.21.6
 
-forge.version=[unsupported]
-neoforge.version=21.5.0-beta
+neoforge.version=21.5.0-alpha.1.21.6-rc1.20250614.225553
 neoforge.yarnPatch=1.21+build.4
