chore: update to Stonecutter 0.7

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,4 @@ jobs:
           distribution: 'temurin'
 
       - name: Run Build
-        run: ./gradlew chiseledBuild
-
-      - name: Run Tests
-        run: ./gradlew chiseledTest
+        run: ./gradlew buildAndCollect
