--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,15 +2,6 @@ name: Publish
 
 on:
   workflow_dispatch:
-    inputs:
-      publishedVersions:
-        required: false
-        description: Published Minecraft versions
-        type: string
-      publishedLoaders:
-        required: false
-        description: Published Loaders
-        type: string
 
 jobs:
   release:
@@ -29,7 +20,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Run Build
-        run: ./gradlew chiseledBuild
+        run: ./gradlew buildAndCollect
 
       - name: Fetch changelog
         run: |
@@ -39,13 +30,11 @@ jobs:
             echo "EOF"
           } >> $GITHUB_ENV
 
-      - run: ./gradlew chiseledPublish
+      - run: ./gradlew publishMods
         env:
           CHANGELOG: ${{ env.CHANGELOG }}
           MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
           CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
-          CHISELED_VERSIONS: ${{ inputs.publishedVersions }}
-          CHISELED_LOADERS: ${{ inputs.publishedLoaders }}
 
       - name: Create release
         uses: softprops/action-gh-release@v2
