ci: fix workflow inputs

--- a/.github/workflows/release_specific.yml
+++ b/.github/workflows/release_specific.yml
@@ -2,10 +2,11 @@ name: Publish Specific
 
 on:
   workflow_dispatch:
-    version:
-      description: 'Minecraft version'
-      required: true
-      type: string
+    inputs:
+      version:
+        description: 'Minecraft version'
+        required: true
+        type: string
 
 
 jobs:
