fix: version accesswideners

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,9 @@ mod.name=Scribble
 mod.version=1.6.1
 mod.group=me.chrr
 
+# Name of the accesswidener file used
+mod.accesswidener=[versioned]
+
 # Fabric
 # check these on https://modmuss50.me/fabric.html
 fabric.yarnVersion=[versioned]
