--- a/versions/1.21.6/gradle.properties
+++ b/versions/1.21.6/gradle.properties
@@ -1,6 +1,8 @@
 platform.versions=1.21.6
 minecraft.version=1.21.6
 
+mod.accesswidener=1.21.6
+
 fabric.yarnVersion=1.21.6+build.1
 fabric.loaderVersion=0.16.14
 fabric.apiVersion=0.127.0+1.21.6
