--- a/versions/1.21.7/gradle.properties
+++ b/versions/1.21.7/gradle.properties
@@ -1,6 +1,8 @@
 platform.versions=1.21.7
 minecraft.version=1.21.7
 
+mod.accesswidener=1.21.7
+
 fabric.yarnVersion=1.21.7+build.1
 fabric.loaderVersion=0.16.14
 fabric.apiVersion=0.128.1+1.21.7
