--- a/versions/1.21.9/gradle.properties
+++ b/versions/1.21.9/gradle.properties
@@ -1,11 +1,11 @@
-platform.versions=1.21.9-alpha.25.35.a
-minecraft.version=25w35a
+platform.versions=1.21.9
+minecraft.version=1.21.9
 
 mod.accesswidener=1.21.7
 
-fabric.yarnVersion=25w35a+build.9
+fabric.yarnVersion=1.21.9+build.1
 fabric.loaderVersion=0.17.2
-fabric.apiVersion=0.132.3+1.21.9
+fabric.apiVersion=0.133.14+1.21.9
 
-neoforge.version=21.8.2-beta
+neoforge.version=21.9.1-beta
 neoforge.yarnPatch=1.21+build.4
