--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,7 @@ neoforge.version=[versioned]
 # Dependencies
 modmenu.version=11.0.2
 clothconfig.version=15.0.140
+yacl.version=3.8.1+1.21.11-fabric
 
 # Distribution
 modrinth.id=yXAvIk0x
