chore: release 2.0.0-beta1

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ parchment.version=[versioned]
 
 # Mod details
 mod.name=Scribble
-mod.version=1.6.7
+mod.version=2.0.0-beta1
 mod.group=me.chrr
 
 # Fabric
