chore: move to Tapestry Config

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ parchment.version=[versioned]
 fabric.loader.version=[versioned]
 fabric.api.version=[versioned]
 neoforge.version=[versioned]
+
+tapestry.version=0.0.0
