--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,12 @@
-name: Publish
+name: Release
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version number'
+        required: true
+        type: string
 
 jobs:
   release:
@@ -10,34 +15,51 @@ jobs:
     permissions:
       contents: write
 
-    steps:
-      - uses: actions/checkout@v4
+    env:
+      RELEASE: 'true'
 
-      - name: Set up JDK 21
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup JDK 25
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
+          java-version: '25'
           distribution: 'temurin'
 
-      - name: Run Build
-        run: ./gradlew buildAndCollect
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
-      - name: Fetch changelog
+      - name: Update version in gradle.properties
+        id: set-version
         run: |
-          {
-            echo "CHANGELOG<<EOF"
-            tr -d '\r' < CHANGELOG.md | awk -vver="${GITHUB_REF_NAME#v}" '/^## / { if (p) { exit }; if ($2 == ver) { p=1; next } } p'
-            echo "EOF"
-          } >> $GITHUB_ENV
+          sed -i "s/^mod\.version=.*/mod\.version=${{ github.event.inputs.version }}/" gradle.properties
 
-      - run: ./gradlew publishMods
+      - name: Build JARs
+        run: ./gradlew build
+
+      - name: Publish
+        run: ./gradlew publishMods
         env:
-          CHANGELOG: ${{ env.CHANGELOG }}
           MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
           CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
+
+      - name: Commit version change
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add gradle.properties
+          git commit -m "chore: release plugin ${{ github.event.inputs.version }}" || echo "no changes to commit"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create release
         uses: softprops/action-gh-release@v2
         with:
-          body: ${{ env.CHANGELOG }}
-          files: build/libs/*.jar
+          tag_name: v${{ github.event.inputs.version }}
+          body: 'Read more on [Modrinth](https://modrinth.com/mod/scribble).'
+          files: versions/*/build/libs/scribble-*.jar
