--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,5 @@ fabric.loader.version=[versioned]
 fabric.api.version=[versioned]
 neoforge.version=[versioned]
 
+mod.version=2.0.0-beta2
 tapestry.version=0.0.0
